# homestead-engine

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: ci.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
data/: default_registry.json  sisteminha_goals.json
include/homestead/core/: entity.hpp  nutrient.hpp  quantity.hpp  registry.hpp  resource.hpp
include/homestead/graph/: edge.hpp  graph.hpp  node.hpp
include/homestead/serialization/: schema_version.hpp  serialization.hpp
include/homestead/solver/: config.hpp  result.hpp  solver.hpp  strategy.hpp
specs/001-homestead-engine-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-homestead-engine-core/checklists/: requirements.md
specs/001-homestead-engine-core/contracts/: public_api.md
specs/002-quantity-scaling-solver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-quantity-scaling-solver/checklists/: requirements.md
specs/002-quantity-scaling-solver/contracts/: api-delta.md
specs/003-npk-soil-balance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-npk-soil-balance/checklists/: requirements.md
specs/003-npk-soil-balance/contracts/: nutrient_api.md
specs/004-composition-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-composition-matching/checklists/: requirements.md
specs/004-composition-matching/contracts/: public-api.md
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  default_registry_data.cpp  log.hpp  quantity.cpp  registry.cpp  resource.cpp
src/graph/: CMakeLists.txt  graph.cpp
src/serialization/: CMakeLists.txt  serialization.cpp
src/solver/: CMakeLists.txt  analytics.cpp  backpropagation.cpp  convergence.cpp  result.cpp  scheduling.cpp
src/solver/detail/: pick.hpp
tests/core/: CMakeLists.txt  test_entity.cpp  test_quantity.cpp  test_registry.cpp  test_resource.cpp
tests/graph/: CMakeLists.txt  test_cycle_detection.cpp  test_graph_construction.cpp  test_traversal.cpp
tests/serialization/: CMakeLists.txt  test_roundtrip.cpp  test_schema_version.cpp
tests/solver/: CMakeLists.txt  bench_solver.cpp  test_analytics.cpp  test_backpropagation.cpp  test_composition_matching.cpp  test_constraints.cpp  test_convergence.cpp  test_nutrient_balance.cpp  test_properties.cpp  test_quantity_scaling.cpp  test_quickstart.cpp  test_scheduling.cpp
